--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "pub-theme-test",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "test-theme for pub-server",
   "main": "pub-config.js",
-  "dependencies": {
-  },
-  "devDependencies": {
-  },
+  "dependencies": {},
+  "devDependencies": {},
+  "files": [
+    "plugins/",
+    "src/",
+    "static/",
+    "browser-script.js",
+    "getcolor.js",
+    "pub-config.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/jldec/pub-theme-test.git"
